force-app/main/default/objects/Number_Serie__c/Number_Serie__c.object-meta.xml
<CustomObject>
    <description>Used to TP/TPX activation where a list of number series needs to be transferred, holds number ranges for Main Number.</description>
    <label>Number Series Range</label>
    <nameField>
        <displayFormat>NSR-{0000}</displayFormat>
        <label>Number Series Range Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Number Series Ranges</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>