force-app/main/default/objects/Number_Serie__c/fields/From__c.field-meta.xml
<CustomField>
    <fullName>From__c</fullName>
    <description>TSFDK-230 Number series starting number</description>
    <inlineHelpText>Number series starting number</inlineHelpText>
    <label>From</label>
    <length>8</length>
    <type>Text</type>
</CustomField>