force-app/main/default/objects/Number_Serie__c/fields/Main_Number__c.field-meta.xml
<CustomField>
    <fullName>Main_Number__c</fullName>
    <formula>Number_Series_Main_Number__r.Main_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Main Number</label>
    <type>Text</type>
</CustomField>