force-app/main/default/objects/Number_Serie__c/fields/Number_Series_Main_Number__c.field-meta.xml
<CustomField>
    <fullName>Number_Series_Main_Number__c</fullName>
    <label>Number Series Main Number</label>
    <referenceTo>Main_number__c</referenceTo>
    <relationshipName>Number_Series_Ranges</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>