force-app/main/default/objects/Number_Serie__c/fields/To__c.field-meta.xml
<CustomField>
    <fullName>To__c</fullName>
    <description>TSFDK-230 Number series ending number</description>
    <inlineHelpText>Number series ending number</inlineHelpText>
    <label>To</label>
    <length>8</length>
    <type>Text</type>
</CustomField>