force-app/main/default/objects/Number_Serie__c/validationRules/Numbers_must_be_8_digits.validationRule-meta.xml
<ValidationRule>
    <fullName>Numbers_must_be_8_digits</fullName>
    <active>true</active>
    <description>From and To numbers must consist of 8 digits.
From number can not be greater than To number.</description>
    <errorConditionFormula>(LEN(From__c) &lt;&gt; 8  || 
LEN(To__c) &lt;&gt; 8  || 
VALUE(From__c)  &gt;  VALUE(To__c)  || 
NOT(ISNUMBER(From__c))  || 
NOT (ISNUMBER(To__c)))</errorConditionFormula>
    <errorMessage>From and To numbers must consist of 8 digits.
From number can not be greater than To number.</errorMessage>
</ValidationRule>